<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8ED8F"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sariq guruh\nO'rtacha miqdorda iste'mol qilinadigan maxsulotlar"
                android:id="@+id/txtTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_flex"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/imgFoods"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/food_yellow"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/food_yellow1"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow1_1"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow1_2"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow1_3"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow1_4"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow1_5"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_green2_1"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_green2_1"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow2_2"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow2_3"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow2_4"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_1"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_2"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_3"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_4"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_5"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_yellow3_6"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>