<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/bg_bottom_nav"
    android:backgroundTint="@color/color1"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/delete4"
        android:textColor="@color/color2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="#F8E2E2" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="#F8E2E2"
        android:text="@string/delete1"
        android:textColor="@color/color2"
        android:gravity="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:backgroundTint="#F8E2E2"
        android:visibility="gone"
        android:text="iwbhvoiudhefoiewrbvoieb"
        android:textColor="@color/color2"
        android:gravity="center"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:backgroundTint="@color/color3"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="8dp"
            android:layout_weight="1"
            android:text="@string/delete3"
            android:textColor="@color/color2"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMain"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginEnd="8dp"
            app:cornerRadius="8dp"
            android:backgroundTint="#FF0000"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/delete2"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>